--- a/src/app/Component/main/main.component.html
+++ b/src/app/Component/main/main.component.html
@@ -31,8 +31,9 @@
 Liste des des choses a faire :
 
 
-<br>faire le formulaie ajout de recette en cours il mangua favoris et pays plus
-<br> il faut je fasse le choix multiple pour ingredients
+
+<br>faire l'ajout de note dans le formulaire
+
 <br>faire l'envoie de donnée pour like dislike et pour favoris
 <br> penser a rajoiuter des colonne comme par exemple : like disloke nm de portion
 <br>rapidite : cout : etc
