--- a/src/app/Component/recette/recette.component.css
+++ b/src/app/Component/recette/recette.component.css
@@ -1,3 +1,70 @@
 .li_etape_recette {
     list-style: none;
 }
+
+.header_detail_recette {
+    text-align: center;
+    /* border: 4px solid black; */
+    /* Ajoutez une bordure */
+    /* Supprimez la bordure en bas */
+    grid-area: 1 / 1 / 2 / 6;
+    /* Ajoutez une ombre en bas */
+}
+
+
+.main_detail_recette {
+    display: grid;
+    grid-template-columns: repeat(2, 0.8fr) repeat(3, 1fr);
+    grid-template-rows: 0.4fr repeat(4, 1fr) 0.5fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin: auto;
+    margin-top: 40px;
+
+    width: 45%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+    background: #dfdee3;
+    z-index: 1;
+    border-radius: 2%;
+
+}
+
+
+
+.Gauche_detail_recette {
+
+    grid-area: 2 / 1 / 6 / 3;
+    /* border-right: solid 4px black; */
+    /* box-shadow: 4px 0 4px rgba(0, 0, 0, 0.4); */
+}
+
+.droite_detail_recette {
+    padding: 15px;
+    grid-area: 2 / 3 / 6 / 6;
+    /* border-bottom: solid 4px black; */
+
+    /* Ajoute une ombre à droite */
+}
+
+.footer {
+    grid-area: 6 / 1 / 7 / 6;
+}
+
+.container_detail_recette {
+    background-image: url('https://cdn.pixabay.com/photo/2017/10/22/21/02/food-2879265_640.jpg');
+    background-size: 100% 100%;
+    /* Redimensionne l'image pour couvrir 100% de la largeur et 100% de la hauteur de l'élément */
+    background-position: center center;
+    /* Centre l'image horizontalement et verticalement */
+    background-repeat: no-repeat;
+    /* Empêche la répétition de l'image */
+    height: 100vh;
+    /* Occupe 100% de la hauteur de la fenêtre */
+    width: 100vw;
+    /* Occupe 100% de la largeur de la fenêtre */
+    box-sizing: border-box;
+    /* Inclut les marges et les bordures dans la taille totale */
+    position: absolute;
+    z-index: 50;
+    /* Position absolue */
+}
