--- a/src/app/Component/recette/recette.component.html
+++ b/src/app/Component/recette/recette.component.html
@@ -1,17 +1,43 @@
-<div *ngIf="recette">
-    <h3>Ingrédients :</h3>
-    <ul>
-        <li *ngFor="let ingredient of recette.IngredientQuantite.split('|')" class="li_etape_recette">
-            {{ ingredient }}
-        </li>
-    </ul>
-    <h3>Étapes :</h3>
-    <ul>
-        <li *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]" class="li_etape_recette">
-            <ng-container *ngIf="recette['Etape' + i]">
-                <strong>Étape {{ i }}:</strong>
-                {{ recette['Etape' + i] }}
-            </ng-container>
-        </li>
-    </ul>
+<div class="container_detail_recette">
+
+    <div *ngIf="dataRecette2" class="main_detail_recette">
+
+        <div class="header_detail_recette">
+            <h1>
+                Detail de la recette
+            </h1>
+        </div>
+
+        <div class="Gauche_detail_recette">
+            <h3>{{ dataRecette2['Nom recette'] }}</h3>
+
+            <p>Pays d'origine: {{ dataRecette2['PaysOrigine'] }}</p>
+            <!-- <p>Favoris: {{ dataRecette2['Favoris'] }}</p> -->
+            <p>Note: {{ dataRecette2['Note'] }}</p>
+            <p>Temps de préparation: {{ dataRecette2['TempsPrepa'] }} min</p>
+        </div>
+
+
+        <div class="droite_detail_recette">
+
+            <div *ngIf="recette">
+                <h3>Ingrédients :</h3>
+                <ul>
+                    <li *ngFor="let ingredient of recette.IngredientQuantite.split('|')" class="li_etape_recette">
+                        {{ ingredient }}
+                    </li>
+                </ul>
+                <h3>Étapes :</h3>
+                <ul>
+                    <li *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]" class="li_etape_recette">
+                        <ng-container *ngIf="recette['Etape' + i]">
+
+                            {{ recette['Etape' + i] }}
+                        </ng-container>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer"> eodeiozdjedi</div>
+    </div>
 </div>
