--- a/src/app/Component/formulaire-recette/formulaire-recette.component.html
+++ b/src/app/Component/formulaire-recette/formulaire-recette.component.html
@@ -1,77 +1,115 @@
-<form class="formulaire_ajout_recette" (submit)="send_ajout_recette()" *ngIf="isAffiched===true">
+
+
+<form
+  class="formulaire_ajout_recette"
+  (submit)="send_ajout_recette()"
+  *ngIf="isAffiched === true"
+  id="formu_add_recette"
+>
+  <div class="Titre_close_boutton">
     <h3 class="titre_ajout_recette">Formulaire d'ajouts de recettes</h3>
-    <div class="container_formulaire_ajout_recette">
-        <div class="formulaire_ajout_recette_gauche">
-            <br><br>
-            <label for="NomRecette">Nom de la recette :</label><br>
-            <input type="text" id="NomRecette" name="NomRecette"><br><br>
-            <label for="ingredients">Ingrédients :</label><br>
-            <div *ngIf="Data_enum && Data_enum.Ingredient" style="height: 222px; overflow-y: scroll;background: white;">
+    <button type="button" class="btn-close" aria-label="Close"(click)="close_formulaire_recette()"></button>
 
-                <div *ngFor="let ingredient of Data_enum.Ingredient">
-                    <input type="checkbox" id="{{ ingredient }}" name="ingredients" [value]="ingredient"
-                        (change)="onIngredientSelectionChange($event)" class="checkbox_ajout_recette">
-                    <label class="full-width-label" for="{{ ingredient }}">{{ ingredient }}</label><br>
-                </div>
-            </div>
-            <!-- Affiche les éléments sélectionnés -->
-            <div>
-                Ingrédients sélectionnés: {{ selectedIngredients.join(', ') }}
-            </div>
+  </div>
+  <div class="container_formulaire_ajout_recette">
+    <div class="formulaire_ajout_recette_gauche">
+      <br /><br />
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="NomRecette"
+          placeholder="Pot au Feu"
+          name="NomRecette"
+        />
+        <label for="NomRecette">Nom de la recette :</label>
+      </div>
 
-            <br><br>
+      <label for="ingredients">Ingrédients :</label><br />
+      <div
+        *ngIf="Data_enum && Data_enum.Ingredient"
+        style="height: 222px; overflow-y: scroll; background: white"
+      >
+        <div *ngFor="let ingredient of Data_enum.Ingredient">
+          <input
+            type="checkbox"
+            id="{{ ingredient }}"
+            name="ingredients"
+            [value]="ingredient"
+            (change)="onIngredientSelectionChange($event)"
+            class="checkbox_ajout_recette"
+          />
+          <label class="full-width-label" for="{{ ingredient }}">{{
+            ingredient
+          }}</label
+          ><br />
+        </div>
+      </div>
+      <!-- Affiche les éléments sélectionnés -->
+      <div>Ingrédients sélectionnés: {{ selectedIngredients.join(", ") }}</div>
 
-            <label for="proteine">Type de protéine :</label><br>
-            <select id="proteine" name="proteine">
+      <br /><br />
 
-                <ng-container *ngIf="Data_enum && Data_enum.ProteineType">
-                    <option *ngFor="let proteineType of Data_enum.ProteineType" [value]="proteineType">{{ proteineType
-                        }}
-                    </option>
-                </ng-container>
-            </select>
+      <label for="proteine">Type de protéine :</label><br />
+      <select
+        id="proteine"
+        name="proteine"
+        class="form-select"
+        aria-label="Veuillez chosir un type de Prot"
+      >
+        <ng-container *ngIf="Data_enum && Data_enum.ProteineType">
+          <option
+            *ngFor="let proteineType of Data_enum.ProteineType"
+            [value]="proteineType"
+          >
+            {{ proteineType }}
+          </option>
+        </ng-container>
+      </select>
 
-            <br><br>
+      <br /><br />
 
-            <label for="glucide">Type de glucide :</label><br>
-            <select id="glucide" name="glucide">
+      <label for="glucide">Type de glucide :</label><br />
+      <select id="glucide" name="glucide" class="form-select">
+        <ng-container *ngIf="Data_enum && Data_enum.GlucideType">
+          <option
+            *ngFor="let glucideType of Data_enum.GlucideType"
+            [value]="glucideType"
+          >
+            {{ glucideType }}
+          </option>
+        </ng-container>
+      </select>
+      <br /><br />
 
-                <ng-container *ngIf="Data_enum && Data_enum.GlucideType">
-                    <option *ngFor="let glucideType of Data_enum.GlucideType" [value]="glucideType">{{ glucideType
-                        }}
-                    </option>
-                </ng-container>
-            </select>
-            <br><br>
+      <label for="Sauce">Type de Sauce :</label><br />
+      <select id="Sauce" name="Sauce" class="form-select">
+        <ng-container *ngIf="Data_enum && Data_enum.SauceType">
+          <option
+            *ngFor="let sauceType of Data_enum.SauceType"
+            [value]="sauceType"
+          >
+            {{ sauceType }}
+          </option>
+        </ng-container>
+      </select>
+      <br /><br />
+      <label for="Epice">Epice ?</label><br />
+      <select id="Epice" name="Epice" class="form-select">
+        <option value=""></option>
+        <option value="1">Oui</option>
+        <option value="0">Non</option>
+      </select>
+      <br /><br />
+      <label for="Favoris">Favoris </label><br />
+      <select id="Favoris" name="Favoris" class="form-select">
+        <option value=""></option>
+        <option value="true">Oui</option>
+        <option value="false">Non</option>
+      </select>
+      <br /><br />
 
-            <label for="Sauce">Type de Sauce :</label><br>
-            <select id="Sauce" name="Sauce">
-
-                <ng-container *ngIf="Data_enum && Data_enum.SauceType">
-                    <option *ngFor="let sauceType of Data_enum.SauceType" [value]="sauceType">{{ sauceType
-                        }}
-                    </option>
-                </ng-container>
-            </select>
-            <br><br>
-            <label for="Epice">Epice ?</label><br>
-            <select id="Epice" name="Epice">
-                <option value=""></option>
-                <option value=1>Oui</option>
-                <option value=0>Non</option>
-
-            </select>
-            <br><br>
-            <label for="Favoris">Favoris </label><br>
-            <select id="Favoris" name="Favoris">
-                <option value=""></option>
-                <option value="true">Oui</option>
-                <option value="false">Non</option>
-
-            </select>
-            <br><br>
-
-            <!-- <select id="PaysOrigin" name="PaysOrigin">
+      <!-- <select id="PaysOrigin" name="PaysOrigin">
                 <option value=""></option>
                 <option value="France">France</option>
                 <option value="Italie">Italie</option>
@@ -80,75 +118,136 @@
                 <option value="Japon">Japon</option>
 
             </select> -->
-            <label for="PaysOrigin">Pays d'origine / Continent </label><br>
-            <div>
-
-                <div class="div_pays">
-                    <label *ngFor="let country of countryList" class="">
-                        <input type="radio" name="selectedCountry" [value]="country.name" [(ngModel)]="selectedCountry"
-                            (change)="onCountrySelected(country.name)">
-                        <img [src]="'../assets/imagesPays/' + country.code.toLowerCase() + '.png'" alt="drapeau">
-                        {{ country.name }}
-                    </label>
-                </div>
-            </div>
-
+      <label for="PaysOrigin">Pays d'origine / Continent </label><br />
+      <div>
+        <div class="div_pays">
+          <label *ngFor="let country of countryList" class="">
+            <input
+              type="radio"
+              name="selectedCountry"
+              [value]="country.name"
+              [(ngModel)]="selectedCountry"
+              (change)="onCountrySelected(country.name)"
+              class="radio_sans_bouton"
+            />
+            <img
+              [src]="
+                '../assets/imagesPays/' + country.code.toLowerCase() + '.png'
+              "
+              alt="drapeau"
+            />
+            {{ country.name }}
+          </label>
         </div>
-        <div class="formulaire_ajout_recette_droite">
-            <br><br>
-            <label for="TempsPreparation">Temps de Preparation (min)</label><br>
-            <input type="number" id="TempsPreparation" name="TempsPreparation"><br><br>
-            <!-- <input type="file"> -->
-            <!-- <br><br> -->
-
-            <label for="link">lien de l'image</label><br>
-            <textarea type="text" id="link" name="link" size="500"></textarea>
-            <br><br>
-
-
-
-
-            <input type="submit" value="Soumettre" class="btn btn-primary" style="margin: 0px 36%;">
-        </div>
+      </div>
     </div>
+    <div class="formulaire_ajout_recette_droite">
+      <br /><br />
+      <label for="TempsPreparation">Temps de Preparation (min)</label><br />
+      <input
+        type="number"
+        id="TempsPreparation"
+        name="TempsPreparation"
+        class="form-control"
+      /><br /><br />
+
+      <label for="TempsCuisson">Temps de Cuisson (min)</label><br />
+      <input
+        type="number"
+        id="TempsCuisson"
+        name="TempsCuisson"
+        class="form-control"
+      /><br /><br />
+
+
+      <div class="form-floating mb-3">
+        <input
+          type="number"
+          class="form-control"
+          id="Note"
+          placeholder="ex: 8.5"
+          name="Note"
+        />
+        <label for="Note">Note sur 10</label>
+        <br /><br />
+      </div>
+        <div class="form-floating mb-3">
+          <input
+            type="number"
+            class="form-control"
+            id="Portion"
+            placeholder="ex:4"
+            name="Portion"
+          />
+          <label for="Portion">Portion (nb de personnes)</label>
+      </div>
+      <br /><br />
+
+      <!-- <input type="file"> -->
+      <!-- <br><br> -->
+
+      <label for="link">lien de l'image</label><br />
+      <textarea type="text" id="link" name="link" size="500"></textarea>
+      <br /><br />
+
+      <input
+        type="submit"
+        value="Soumettre"
+        class="btn btn-primary"
+        style="margin: 0px 36%"
+      />
+    </div>
+  </div>
 </form>
 
-<form class="formulaire_ajout_recette" (submit)="send_ajout_recette_etape()" *ngIf="isAffichedEtape===true">
-    <h3 class="titre_ajout_recette">Formulaire d'ajouts de recettes</h3>
-    <div class="container_formulaire_ajout_recette">
+<form
+  class="formulaire_ajout_recette"
+  (submit)="send_ajout_recette_etape()"
+  *ngIf="isAffichedEtape === true"
+>
+  <h3 class="titre_ajout_recette">Formulaire d'ajouts de recettes</h3>
+  <div class="container_formulaire_ajout_recette">
+    <br /><br />
 
-
-        <br><br>
-
-        <!--
+    <!--
 //ici tu me fait le ng for ingredient -->
 
-        <!-- Utilise *ngFor pour afficher les champs pour chaque ingrédient sélectionné -->
-        <!-- Utilise *ngFor pour afficher les champs pour chaque ingrédient sélectionné -->
-        <div *ngFor="let ingredient of selectedIngredients; let i = index" class="ingredientQuantite"
-            [ngClass]="{ 'even-row': i % 2 === 0, 'odd-row': i % 2 !== 0 }">
-            <div><label for="ingredient{{ i }}">Ingrédient {{ i + 1 }} :</label>
-                {{selectedIngredients[i]}}
-            </div>
-            <div>
-                <label for="quantite{{ i }}">Quantité :</label>
-                <input type="text" id="quantite{{ i }}" name="quantite{{ i }}" [(ngModel)]="selectedQuantities[i]">
-            </div>
-            <br>
-        </div>
-        <div class="etape" *ngFor="let etape of etapes; let i = index">
-            <label for="etape{{ i }}">Étape {{ i + 1 }} :</label>
-            <input type="text" id="etape{{ i }}" name="etape{{ i }}">
-            <!-- <button (click)="supprimerEtape(i)">Supprimer</button> -->
-            <br>
-        </div>
-
-
-
-        <div (click)="ajouterEtape()">+</div>
-
-
-        <input type="submit" value="Soumettre" class="btn btn-primary" style="margin: 0px 36%;">
+    <!-- Utilise *ngFor pour afficher les champs pour chaque ingrédient sélectionné -->
+    <!-- Utilise *ngFor pour afficher les champs pour chaque ingrédient sélectionné -->
+    <div
+      *ngFor="let ingredient of selectedIngredients; let i = index"
+      class="ingredientQuantite"
+      [ngClass]="{ 'even-row': i % 2 === 0, 'odd-row': i % 2 !== 0 }"
+    >
+      <div>
+        <label for="ingredient{{ i }}">Ingrédient {{ i + 1 }} :</label>
+        {{ selectedIngredients[i] }}
+      </div>
+      <div>
+        <label for="quantite{{ i }}">Quantité :</label>
+        <input
+          type="text"
+          id="quantite{{ i }}"
+          name="quantite{{ i }}"
+          [(ngModel)]="selectedQuantities[i]"
+        />
+      </div>
+      <br />
+    </div>
+    <div class="etape" *ngFor="let etape of etapes; let i = index">
+      <label for="etape{{ i }}">Étape {{ i + 1 }} :</label>
+      <input type="text" id="etape{{ i }}" name="etape{{ i }}" />
+      <!-- <button (click)="supprimerEtape(i)">Supprimer</button> -->
+      <br />
     </div>
 
+    <div (click)="ajouterEtape()">+</div>
+
+    <input
+      type="submit"
+      value="Soumettre"
+      class="btn btn-primary"
+      style="margin: 0px 36%"
+    />
+  </div>
 </form>
