--- a/src/app/Component/liste-recette/liste-recette.component.css
+++ b/src/app/Component/liste-recette/liste-recette.component.css
@@ -54,3 +54,15 @@
     /* color: darkgray; */
     font-weight: 400;
 }
+
+.flex_like_recette {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.like_dislike {
+    background-color: inherit;
+    border: none;
+}
