--- a/src/app/Component/navbar/navbar.component.html
+++ b/src/app/Component/navbar/navbar.component.html
@@ -1,4 +1,8 @@
-<div class="container-fluid">
+<div class="div_header" style="
+  width: 100%;
+  margin: 0;
+  padding: 0;
+">
   <nav class="navbar sticky-top navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="">Cuisine LOLO</a>
     <ul class="nav justify-content-center">
